test/tests/WrongGenericParameterCount.panda
class WrongGenericParameterCount {
    def a:Array<Int, String>

    def b:HashMap<String>
}